[project]
authors = [{name = "kartikey1998", email = "chhipa.kartikey@gmail.com"}]
dependencies = []
name = "Deep-Learning-Performance-Architect"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
deep_learning_performance_architect = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
numpy = ">=2.3.2,<3"
